--- a/frontend/src/assets/body.css
+++ b/frontend/src/assets/body.css
@@ -6,8 +6,7 @@
   font-weight: normal;
 }
 
-body {
-  min-height: 100vh;
+body, #app {
   color: var(--color-text);
   background: var(--color-background);
   transition:
@@ -27,8 +26,35 @@ body {
     'Droid Sans',
     'Helvetica Neue',
     sans-serif;
-  font-size: 15px;
+  font-size: var(--size-medium);
+  max-width: 100vw;
+  min-height: 100vh;
+  overflow: auto;
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  ::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent; 
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(122, 89, 89);
+    border: 2px solid transparent;
+    background-clip: padding-box;
+    border-radius: 7px;
+  
+    &:hover {
+      background: rgb(92, 70, 70);
+      border: none;
+    }
+  
+    &:active {
+      background: rgb(70, 53, 53);
+    }
+  }
 }
