2: Basic header and footer layout

--- a/frontend/src/assets/sizes.css
+++ b/frontend/src/assets/sizes.css
@@ -18,4 +18,7 @@ body {
     --size-smaller: calc(10px + 0.5vw);
     --size-smallest: calc(8px + 0.4vw);
   }
+
+  --size-header: calc(1.3 * var(--size-title) + var(--size-medium) + var(--size-smaller));
+  --size-footer: calc(1.3 * var(--size-title) + var(--size-medium) + var(--size-smaller));
 }
