--- a/frontend/src/assets/classes.css
+++ b/frontend/src/assets/classes.css
@@ -1,18 +1,30 @@
 
-.max-size {
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-  min-width: 100%;
-  min-height: 100%;
-  width: 100%;
-}
-
-.set-size {
+.size {
   height: var(--size);
   max-width: var(--size);
   max-height: var(--size);
   min-width: var(--size);
   min-height: var(--size);
   width: var(--size);
+}
+
+.size-h {
+  height: var(--size-h);
+  max-height: var(--size-h);
+  min-height: var(--size-h);
+}
+
+.size-w {
+  max-width: var(--size-w);
+  min-width: var(--size-w);
+  width: var(--size-w);
+}
+
+.size-max {
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  width: 100%;
 }
