--- a/frontend/src/assets/body.css
+++ b/frontend/src/assets/body.css
@@ -6,7 +6,8 @@
   font-weight: normal;
 }
 
-body, #app {
+body,
+#app {
   transition:
     color 0.5s,
     background-color 0.5s;
@@ -37,20 +38,20 @@ body, #app {
   }
 
   ::-webkit-scrollbar-track {
-    background: transparent; 
+    background: transparent;
   }
-  
+
   ::-webkit-scrollbar-thumb {
     background: rgb(122, 89, 89);
     border: 2px solid transparent;
     background-clip: padding-box;
     border-radius: 7px;
-  
+
     &:hover {
       background: rgb(92, 70, 70);
       border: none;
     }
-  
+
     &:active {
       background: rgb(70, 53, 53);
     }
